Resolve "Add support for the MDR service"